# test_project

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: f21967d961e7_init_commit.py
app/: main.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/api/v1/wallets/: __init__.py  endpoints.py
app/core/: config.py
app/db/: __init__.py  base_model.py  database.py  models.py  utils.py
app/exceptions/: __init__.py  wallet_exceptions.py
app/repositories/: __init__.py  base_repo.py  wallet_repo.py
app/schemas/: __init__.py  wallet.py
app/services/: __init__.py  wallet_service.py
app/uow/: __init__.py  uow.py
tests/: conftest.py  test_api.py
